# freeking

./: .gitignore  CMakeLists.txt  README.md
Assets/: kingpin.exe.manifest  kingpin.rc
Assets/Shaders/: Billboard.shader  DebugLine.shader  DebugLine.vert  DynamicModel.shader  Lightmapped.frag  Lightmapped.shader  Skybox.shader  Sprite.shader  Sprite.vert  Text.frag  Text.shader
Assets/Textures/: crosshair.tga
Resources/: classnames.txt  freeking.exe.manifest  freeking.rc
Shaders/: DebugLine.frag  Lightmapped.vert  Mesh.frag  Sprite.frag  VertexSkinnedMesh.frag  VertexSkinnedMesh.vert
Source/: BspFile.h  BspFlags.h  CMakeLists.txt  EntityLump.cpp  EntityLump.h  FileSystem.cpp  FileSystem.h  Font.cpp  Font.h  FpsTimer.cpp  FreeCamera.cpp  Game.cpp  Game.h  Lightmap.cpp  Lightmap.h  LineRenderer.h  Map.cpp  Map.h  Math.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  MdxFile.cpp  MdxFile.h  Mesh.h  NormalTable.h  PakFile.cpp  PakFile.h  Paths.cpp  Paths.h  Profiler.h  Quaternion.cpp  Quaternion.h  ShaderProgram.h  SpriteBatch.cpp  TextureBuffer.h  TextureSampler.h  Thug.cpp  Thug.h  Util.cpp  (+3 more)
Source/Audio/: AudioClip.cpp  AudioClip.h  AudioDevice.cpp  AudioDevice.h
Source/Bsp/: BspFile.h  BspFlags.h  BspStructures.h  EntityLump.cpp  EntityLump.h  EntitySpawn.cpp
Source/Color/: Color.cpp  Color.h  LinearColor.cpp  LinearColor.h
Source/Components/: EntityComponent.cpp  EntityComponent.h  SceneComponent.cpp  SceneComponent.h
Source/Core/: AssetLibrary.cpp  AssetLibrary.h  EnumFlags.h  FileSystem.cpp  FileSystem.h  FpsTimer.h  IEntity.cpp  IEntity.h  Main.cpp  MakeEntity.cpp  MemoryStream.cpp  MemoryStream.h  Paths.cpp  Profiler.cpp  TimeUtil.cpp  TimeUtil.h  Util.cpp  Util.h  Window.cpp  Window.h
Source/Entities/: BaseCastEntity.cpp  BaseCastEntity.h  BaseEntity.cpp  BaseEntity.h  BaseWorldEntity.cpp  BaseWorldEntity.h  BrushModelEntity.cpp  BrushModelEntity.h  ButtonEntity.cpp  ButtonEntity.h  DoorEntity.cpp  DoorEntity.h  DoorRotatingEntity.cpp  DoorRotatingEntity.h  MakeEntity.cpp  ModelEntity.cpp  ModelEntity.h  PrimitiveEntity.cpp  PrimitiveEntity.h  RotatingEntity.cpp  RotatingEntity.h  SceneEntity.cpp  SceneEntity.h  WorldSpawnEntity.cpp  WorldSpawnEntity.h
Source/Entity/: AElps.cpp  AJunior.cpp  AJunior.h  ALight.h  AViewthing.h  Elps.cpp  Elps.h  Junior.cpp  Junior.h  (+10 more)
(+1287 files in other folders)
